--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
     text-align: left;
     padding-top: 40px;
     margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 #survey-form [placeholder] {
